--- a/testcontroller/config.ini
+++ b/testcontroller/config.ini
@@ -14,7 +14,7 @@ fitnesseroot = C:\Program Files (x86)\Jenkins\jobs\%s\workspace\FitNesseRoot
 workingfitroot = C:\TestController\FitNesseRoot
 
 [fitnesse]
-rooturl = http://zhu13115:9090/
+rooturl = http://arthur10:8080/
 
 [labs]
 # key is host ip
